      optimization when you want to reindex all the idxs *and* the
      security in a single shot with reindexObject().

    - doActionFor() propagates **kw to isActionSupported() through
      _checkTransitionGuard() until the guard.check() method so that
      StateChangeInfo() can be constructed with those kwargs.

  Bugs Fixed

    - Sync catalog metadata column with correct name of DublinCore string
      ExpirationDate method. (http://zope.org/Collectors/CMF/345)

CMF-1.5.1 (2005/04/24)

  Other

    - Made INSTALL.txt more general so it does not refer to specific CMF
      version numbers in the 1.5 series and thus won't look outdated from
      one release to the next.

    - CMFCatalogAware: reindexObjectSecurity() optimizations in case
      of an indexable container.

  Bug Fixes

    - CMFDefault.SyndicationTool: Coerce property values into correct
      types. (http://zope.org/Collectors/CMF/344)

    - CMFCore.Skinnable: Don't catch ConflictError in __of__.

    - CMFCore.CMFCatalogAware: In reindexObjectSecurity, use
      _unrestrictedGetObject when available, and LOG when the object
      cannot be retrieved.

CMF-1.5.1beta2 (2005/04/17)

  New Features

    - MemberDataTool: setSecurityProfile (called by MembershipTool's
      setPassword) now uses the userFolderEditUser() API of the user
      folder to change user information.

    - DCWorkflow: To bridge some of the bound variable name differences
      between TALES expressions used in DCWorkflow and those used elsewhere
      in the CMF, added two "aliases" to the expression context that reflect
      the CMF conventions: "object" points to "here", and "folder" points
      to "container" (http://www.zope.org/Collectors/CMF/338)

    - CMFSetup: Improved update directives for extension profiles.
      See the new PROFILES.txt for details.

    - CMFCore.DirectoryView: Made list of file names to ignore configurable.
      The previously hardcoded list of files to ignore when creating their